fixing align for picture

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3036,10 +3036,13 @@ a:hover,
   //float: right;
   margin-right: 70px;
   min-width: 200px;
-  img {
+  .img {
     border-radius: 50px;
-    //width: 100px;
-    //height: 100px;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    display: table;
+    margin: 0 auto;
   }
 }
 
